<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dogm_msgs</name>
  <version>1.0.0</version>
  <description>Dynamic occupancy grid map message type.</description>
  <maintainer email="barry.gilhuly@uwaterloo.ca">Barry Gilhuly</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/idlebear/dogm_ros</url>
  <url type="bugtracker">https://github.com/idlebear/dogm_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
